kubernetes/apps/network/envoy-gateway/config/backendtrafficpolicy.yaml
---
# yaml-language-server: $schema=https://raw.githubusercontent.com/envoyproxy/gateway/refs/heads/main/charts/gateway-helm/crds/generated/gateway.envoyproxy.io_clienttrafficpolicies.yaml
apiVersion: gateway.envoyproxy.io/v1alpha1
kind: BackendTrafficPolicy
metadata:
  name: internal
spec:
  targetRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: internal
  compression:
    - type: Brotli
    - type: Gzip
---
# yaml-language-server: $schema=https://raw.githubusercontent.com/envoyproxy/gateway/refs/heads/main/charts/gateway-helm/crds/generated/gateway.envoyproxy.io_clienttrafficpolicies.yaml
apiVersion: gateway.envoyproxy.io/v1alpha1
kind: BackendTrafficPolicy
metadata:
  name: external
spec:
  targetRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: external
  compression:
    - type: Brotli
    - type: Gzip
